2006-11-03  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (handle_seek_event),
	(gnl_composition_event_handler), (update_start_stop_duration):
	If we have a default source, the composition start value is always 0.
	Don't rely on incoming seek event, create a new one from calculated
	values.

2006-11-02  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (convert_list_to_tree):
	Take into account the priority of default sources when calculating the
	highest priority. This fixes #362399
	* tests/check/gnloperation.c: (GST_START_TEST), (gnonlin_suite):
	Unit test for fixed behaviour.

2006-11-02  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_ghost_pad_set_target),
	(next_stop_in_region_above_priority), (convert_list_to_tree),
	(get_stack_list), (get_clean_toplevel_stack),
	(gnl_composition_remove_object):
	Better check for the 'next stop' of a stack. It will now look at all
	objects under the highest priority (and not the lowest as previously).
	Fixes #356380.
	Set new pads as active.
	Add some debug.
	* gnl/gnlobject.c: (gnl_object_ghost_pad_full):
	* gnl/gnloperation.c: (gnl_operation_add_element), (add_sink_pad):
	Activate new pads.
	* tests/check/gnloperation.c: (GST_START_TEST), (gnonlin_suite):
	Added new test (test_pyramid_operations) to test issues fixed for
	#356380.
	* tests/check/simple.c: (GST_START_TEST):
	Unref sinkpads before testing some issues.

2006-09-16  Edward Hervey  <edward@fluendo.com>

	* tests/check/common.h:
	* tests/check/complex.c: (GST_START_TEST):
	gst_element_link_filtered() does not take the refcount on the caps.
	Therefore we unref the caps after use.

2006-09-16  Edward Hervey  <edward@fluendo.com>

	* tests/check/common.h:
	Added convenience function to create a int/float audiotest gnlsource.
	* tests/check/complex.c: (GST_START_TEST), (gnonlin_suite):
	Added test_renegotiation to test re-negotiation error seen in #352827

2006-09-16  Edward Hervey  <edward@fluendo.com>
