@@ -223,55 +223,55 @@ GST_START_TEST (test_one_default_another)
  
   /*
     Source 1
-    Start : 0s
+    Start : 1s
     Duration : 1s
     Priority : 1
   */
-  source1 = videotest_gnl_src ("source1", 0, 1 * GST_SECOND, 1, 1);
+  source1 = videotest_gnl_src ("source1", 1 * GST_SECOND, 1 * GST_SECOND, 1, 1);
   fail_if (source1 == NULL);
-  check_start_stop_duration(source1, 0, 1 * GST_SECOND, 1 * GST_SECOND);
+  check_start_stop_duration(source1, GST_SECOND, 2 * GST_SECOND, 1 * GST_SECOND);
 
   /*
     Source 2
-    Start : 2s
-    Duration : 1s
-    Priority : 1
-  */
-  source2 = videotest_gnl_src ("source2", 2 * GST_SECOND, 1 * GST_SECOND, 2, 1);
-  fail_if (source2 == NULL);
-  check_start_stop_duration(source2, 2 * GST_SECOND, 3 * GST_SECOND, 1 * GST_SECOND);
-
-  /*
-    Source 3
     Start : 3s
     Duration : 1s
     Priority : 1
   */
-  source3 = videotest_gnl_src ("source3", 3 * GST_SECOND, 1 * GST_SECOND, 2, 1);
+  source2 = videotest_gnl_src ("source2", 3 * GST_SECOND, 1 * GST_SECOND, 2, 1);
+  fail_if (source2 == NULL);
+  check_start_stop_duration(source2, 3 * GST_SECOND, 4 * GST_SECOND, 1 * GST_SECOND);
+
+  /*
+    Source 3
+    Start : 4s
+    Duration : 1s
+    Priority : 1
+  */
+  source3 = videotest_gnl_src ("source3", 4 * GST_SECOND, 1 * GST_SECOND, 2, 1);
   fail_if (source3 == NULL);
-  check_start_stop_duration(source3, 3 * GST_SECOND, 4 * GST_SECOND, 1 * GST_SECOND);
+  check_start_stop_duration(source3, 4 * GST_SECOND, 5 * GST_SECOND, 1 * GST_SECOND);
 
 
   /* Add one source */
 
   gst_bin_add (GST_BIN (comp), source1);
-  check_start_stop_duration(comp, 0, 1 * GST_SECOND, 1 * GST_SECOND);
+  check_start_stop_duration(comp, GST_SECOND, 2 * GST_SECOND, 1 * GST_SECOND);
 
   ASSERT_OBJECT_REFCOUNT(source1, "source1", 1);
 
   /* defaultsrc source */
 
   gst_bin_add (GST_BIN (comp), defaultsrc);
-  check_start_stop_duration(comp, 0, 1 * GST_SECOND, 1 * GST_SECOND);
-  check_start_stop_duration(defaultsrc, 0, 1 * GST_SECOND, 1 * GST_SECOND);
+  check_start_stop_duration(comp, 0, 2 * GST_SECOND, 2 * GST_SECOND);
+  check_start_stop_duration(defaultsrc, 0, 2 * GST_SECOND, 2 * GST_SECOND);
 
   ASSERT_OBJECT_REFCOUNT(defaultsrc, "defaultsrc", 1);
  
   /* Second source */
 
   gst_bin_add (GST_BIN (comp), source2);
-  check_start_stop_duration(comp, 0, 3 * GST_SECOND, 3 * GST_SECOND);
-  check_start_stop_duration(defaultsrc, 0, 3 * GST_SECOND, 3 * GST_SECOND);
+  check_start_stop_duration(comp, 0, 4 * GST_SECOND, 4 * GST_SECOND);
+  check_start_stop_duration(defaultsrc, 0, 4 * GST_SECOND, 4 * GST_SECOND);
 
   ASSERT_OBJECT_REFCOUNT(source2, "source2", 1);
 
@@ -279,8 +279,8 @@ GST_START_TEST (test_one_default_another)
   /* Third source */
 
   gst_bin_add (GST_BIN (comp), source3);
-  check_start_stop_duration(comp, 0, 4 * GST_SECOND, 4 * GST_SECOND);
-  check_start_stop_duration(defaultsrc, 0, 4 * GST_SECOND, 4 * GST_SECOND);
+  check_start_stop_duration(comp, 0, 5 * GST_SECOND, 5 * GST_SECOND);
+  check_start_stop_duration(defaultsrc, 0, 5 * GST_SECOND, 5 * GST_SECOND);
 
   ASSERT_OBJECT_REFCOUNT(source3, "source3", 1);
 
@@ -311,6 +311,10 @@ GST_START_TEST (test_one_default_another)
 					      segment_new (1.0, GST_FORMAT_TIME,
 							   3 * GST_SECOND, 4 * GST_SECOND,
 							   3 * GST_SECOND));
+  collect->expected_segments = g_list_append (collect->expected_segments,
+					      segment_new (1.0, GST_FORMAT_TIME,
+							   4 * GST_SECOND, 5 * GST_SECOND,
+							   4 * GST_SECOND));
 
   g_signal_connect (G_OBJECT (comp), "pad-added",
 		    G_CALLBACK (composition_pad_added_cb), collect);
@@ -378,6 +382,10 @@ GST_START_TEST (test_one_default_another)
 					      segment_new (1.0, GST_FORMAT_TIME,
 							   3 * GST_SECOND, 4 * GST_SECOND,
 							   3 * GST_SECOND));
+  collect->expected_segments = g_list_append (collect->expected_segments,
+					      segment_new (1.0, GST_FORMAT_TIME,
+							   4 * GST_SECOND, 5 * GST_SECOND,
+							   4 * GST_SECOND));
   collect->gotsegment = FALSE;
 
 
